--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
 @import './helpers.layout';
+@import './helpers.elements';
 @import './app';
 @import './component.tab';
+@import './component.tabs-batch-operations';
