--- a/src/css/component.tabs-batch-operations.scss
+++ b/src/css/component.tabs-batch-operations.scss
@@ -18,7 +18,7 @@
     width: 300px;
     height: 300px;
   }
-  .add-to-list-panel {
+  .panel-content {
     .main-section {
       height: 230px;
       padding: 10px 0;
@@ -26,7 +26,7 @@
     .actions {
       display: flex;
       justify-content: space-between;
-      .cancle {
+      .secondary-btn {
         margin-left: auto;
         margin-right: 10px;
       }
