TL-9 Create List input

--- a/src/css/component.tab.scss
+++ b/src/css/component.tab.scss
@@ -6,7 +6,7 @@ ul.tabs-list {
 li.tab {
   list-style: none;
   height: 28px;
-  padding: 4px 6px;
+  padding: 4px 0;
   &:hover {
     background: #eee;
   }
