--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -14,6 +14,7 @@ section.app-container {
   overflow-x: auto;
   overflow-y: scroll;
   height: 100%;
+  padding: 0 6px;
   &::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 3px;
