--- a/src/css/component.tabs-batch-operations.scss
+++ b/src/css/component.tabs-batch-operations.scss
@@ -1,5 +1,5 @@
 .tabs-batch-operations {
-  padding: 0 6px 6px;
+  padding: 0 0 6px;
   border-bottom: 1px solid #ddd;
   display: flex;
   align-items: center;
@@ -18,18 +18,24 @@
     width: 300px;
     height: 300px;
   }
-  .panel-content {
-    .main-section {
-      height: 230px;
-      padding: 10px 0;
-    }
-    .actions {
-      display: flex;
-      justify-content: space-between;
-      .secondary-btn {
-        margin-left: auto;
-        margin-right: 10px;
-      }
+}
+
+.panel-content {
+  .main-section {
+    height: 230px;
+    padding: 10px 0;
+  }
+  .create-list-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .actions {
+    display: flex;
+    justify-content: space-between;
+    .secondary-btn {
+      margin-left: auto;
+      margin-right: 10px;
     }
   }
 }
