TL-11 Display checkbox on lists with styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,6 @@
 @import './helpers.layout';
 @import './helpers.elements';
 @import './app';
+@import './component.common';
 @import './component.tab';
 @import './component.tabs-batch-operations';
