--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 @import './helpers.layout';
+@import './helpers.text';
 @import './helpers.elements';
 @import './app';
 @import './component.common';
-@import './component.tab';
+@import './component.lists';
 @import './component.tabs-batch-operations';
