--- a/src/css/helpers.elements.scss
+++ b/src/css/helpers.elements.scss
@@ -5,3 +5,25 @@
 .bottom-10 {
   margin-bottom: 10px;
 }
+
+.with-centered-children {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scrollable-section {
+  overflow-x: auto;
+  overflow-y: scroll;
+  height: 100%;
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 3px;
+    background-color: #fff;
+  }
+  &::-webkit-scrollbar-thumb {
+    border: 1px solid #f8f8f8;
+    background-color: #e5e5e5;
+  }
+
+}
