TL-13 Change add to list UI to instant adding action

--- a/src/css/helpers.elements.scss
+++ b/src/css/helpers.elements.scss
@@ -6,6 +6,10 @@
   margin-bottom: 10px;
 }
 
+.horizontal-center-aligned {
+  align-items: center;
+}
+
 .with-centered-children {
   display: flex;
   align-items: center;
