--- a/src/css/component.common.scss
+++ b/src/css/component.common.scss
@@ -6,10 +6,27 @@
 .item-row {
   display: flex;
   list-style: none;
-  height: 30px;
+  height: 32px;
   padding: 4px 0;
   &:hover {
     background: #eee;
+  }
+}
+
+.item-row_edit-mode {
+  &:hover {
+    background: #fff; 
+  }
+  height: 45px;
+  .item-row__text {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+    > * {
+      width: 96%;
+    }
   }
 }
 
