--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,13 @@
+@import './variables';
 @import './helpers.layout';
 @import './helpers.text';
-@import './helpers.elements';
+@import './helpers.positioning';
+@import './helpers.effects';
 @import './app';
+@import './containers';
 @import './component.common';
-@import './component.lists';
+@import './component.list-item';
+@import './component.list-details';
+@import './component.tabs-page';
+@import './component.tab-item';
 @import './component.tabs-batch-operations';
