--- a/src/css/component.common.scss
+++ b/src/css/component.common.scss
@@ -1,57 +1,21 @@
-.item-rows-ul {
-  padding: 6px 0 0 0;
-  margin: 0;
-}
-
-.item-row {
-  display: flex;
-  list-style: none;
-  height: 32px;
-  padding: 4px 0;
-  &:hover {
-    background: #eee;
-  }
-}
-
-.item-row_edit-mode {
-  &:hover {
-    background: #fff; 
-  }
-  height: 45px;
-  .item-row__text {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 0;
-    > * {
-      width: 96%;
-    }
-  }
-}
-
-.item-row__favicon {
+.favicon {
+  width: 20px;
+  height: 20px;
   img {
     width: 20px;
     height: 20px;
   }
 }
 
-.item-row__text {
-  white-space: nowrap;
-  a {
-    text-decoration: none;
-  }
+.item-rows-ul {
+  padding: 0;
+  margin: 0;
 }
 
-.item-row__text_main {
-  margin-left: 8px;
-  width: 90%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.item-row__right-secondary {
-  margin-left: auto;
-  margin-right: 10px;
+.item-row {
+  display: flex;
+  list-style: none;
+  padding: 2px 0;
+  align-items: center;
+  border-radius: 4px;
 }
