--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import './helpers.text';
 @import './helpers.positioning';
 @import './helpers.effects';
+@import './mixins.item';
 @import './app';
 @import './containers';
 @import './component.common';
