TL-21 Bulk operations on links - opening tabs

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,8 +4,8 @@ body {
   margin: 0;
 }
 
-#root {
-  width: 400px;
-  height: 550px;
+.popup-root {
+  width: $popup-root-width;
+  height: $popup-root-height;
   padding: 5px 5px 28px;
 }
