--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,6 @@
 @import './containers';
 @import './component.common';
 @import './component.list-item';
-@import './component.list-details';
-@import './component.tabs-page';
+@import './component.pages';
 @import './component.tab-item';
-@import './component.tabs-batch-operations';
+@import './component.bulk-operations';
