--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,2 +1,8 @@
 $color-global-bg: #fff;
 $color-hover: #eee;
+
+// Layout sizes
+$popup-root-width: 400px;
+$popup-root-height: 600px;
+$popup-secondary-block-height: 530px;
+$popup-third-block-height: 470px;
