TL-24 Show selected hints in tabs/links page bottom

--- a/src/css/containers.scss
+++ b/src/css/containers.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.app-tab {
+  margin-top: 10px;
+}
+
 .add-to-list-box {
   > * {
     height: 300px;
@@ -33,9 +37,33 @@
   }
 }
 
-
 .ListsPagePanel {
   > * {
     height: $popup-secondary-block-height;
   }
+}
+
+.TabsPage {
+  height: $popup-secondary-block-height;
+}
+
+.TabsPage__tabs {
+  height: $popup-third-block-height + 15px;
+  padding: 6px 0;
+  margin-left: -4px;
+}
+
+.ListDetailsPage {
+  padding-top: 10px;
+}
+
+.ListDetailsPage__lists {
+  @include item-rows-ul;
+  @extend .scrollable;
+  height: $popup-third-block-height - 60px;
+  margin-left: -4px;
+}
+
+.ListDetailsPage_bottom {
+  padding-top: 10px;
 }
