--- a/src/css/component.common.scss
+++ b/src/css/component.common.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.PageBottom {
+  padding: 6px 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
 .PageBottomHints {
   font-size: 11px;
   color: #666;
