--- a/src/css/helpers.effects.scss
+++ b/src/css/helpers.effects.scss
@@ -9,7 +9,7 @@
   }
   &::-webkit-scrollbar-thumb {
     border: 1px solid #f8f8f8;
-    background-color: #e5e5e5;
+    background-color: $gray3;
   }
 }
 
