--- a/src/css/component.list-item.scss
+++ b/src/css/component.list-item.scss
@@ -22,6 +22,7 @@ $item-height: 36px;
 .ListItem__main__hint {
   @extend .text-light;
   text-align: right;
+  padding-right: 10px;
 }
 
 .ListItem__main--edit {
