TL-30 Close and bulk close on tabs page

--- a/src/css/component.common.scss
+++ b/src/css/component.common.scss
@@ -22,7 +22,7 @@
   color: #666;
 }
 
-.BulkCloseDuplications {
+.popover-content-with-scrollable {
   ul {
     @extend .scrollable;
     max-height: 300px;
