TL-32 Add tooltip for buttons

--- a/src/css/component.common.scss
+++ b/src/css/component.common.scss
@@ -21,6 +21,10 @@
   justify-content: flex-end;
 }
 
+.custom-tooltip {
+  white-space: nowrap;
+}
+
 .PageBottomHints {
   font-size: 11px;
   color: #666;
