TL-31 Delete link(s) from list

--- a/src/css/containers.scss
+++ b/src/css/containers.scss
@@ -42,15 +42,15 @@
   }
 }
 
-.ListDetailsPage {
+.LinksPage {
   padding: 10px 0 0 10px;
 }
 
-.ListDetailsPage {
+.LinksPage {
   height: $popup-third-block-height - 25px;
 }
 
-.ListDetailsPage.TabsPage {
+.LinksPage.TabsPage {
   height: $popup-third-block-height + 15px;
 }
 
