TL-33 Rename some css files, set no select of row on clicking, adjust hover styles

--- a/src/css/component.ListItem.scss
+++ b/src/css/component.ListItem.scss
@@ -10,6 +10,7 @@ $item-height: 36px;
 .ListItem {
   @include item-row;
   @extend .hoverable;
+  @extend .hoverable__clickable;
   height: $item-height;
 }
 
