--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,6 @@
 @import './app';
 @import './containers';
 @import './component.common';
-@import './component.list-item';
-@import './component.tab-item';
-@import './component.bulk-operations';
+@import './component.ListItem';
+@import './component.TabItem';
+@import './component.BulkOperations';
