--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -11,3 +11,4 @@ $popup-third-block-height: 465px;
 $body-bg: #fff;
 $secondary-body-bg: $gray5;
 $color-hover: $light-gray4;
+$color-hover-border: $gray2;
