--- a/src/css/component.ListItem.scss
+++ b/src/css/component.ListItem.scss
@@ -4,7 +4,7 @@ $item-height: 36px;
   @include item-rows-ul;
   @extend .scrollable;
   margin-left: -4px;
-  padding: 10px 0 0 10px;
+  padding: 10px 0 5px 10px;
 }
 
 .ListItem {
