--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,8 +5,9 @@
 @import './helpers.effects';
 @import './mixins.item';
 @import './app';
-@import './containers';
 @import './component.common';
 @import './component.ListItem';
 @import './component.TabItem';
 @import './component.BulkOperations';
+@import './containers';
+@import './containers.ListPage';
