--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,14 +1,14 @@
-@import './variables';
-@import './helpers.layout';
-@import './helpers.text';
-@import './helpers.positioning';
-@import './helpers.effects';
-@import './mixins.item';
-@import './app';
-@import './component.common';
-@import './component.ListItem';
-@import './component.TabItem';
-@import './component.BulkOperations';
-@import './components';
-@import './containers';
-@import './containers.ListPage';
+@import './variables.scss';
+@import './helpers.layout.scss';
+@import './helpers.text.scss';
+@import './helpers.positioning.scss';
+@import './helpers.effects.scss';
+@import './mixins.item.scss';
+@import './app.scss';
+@import './component.common.scss';
+@import './component.ListItem.scss';
+@import './component.TabItem.scss';
+@import './component.BulkOperations.scss';
+@import './components.scss';
+@import './containers.scss';
+@import './containers.ListPage.scss';
