--- a/src/css/component.ListItem.scss
+++ b/src/css/component.ListItem.scss
@@ -1,29 +1,31 @@
 $item-height: 36px;
 
 .ListItems {
-  @include item-rows-ul;
-  @extend .scrollable;
+  @extend %item-rows-ul;
+  @extend %scrollable;
   margin-left: -4px;
   padding: 10px 0 5px 10px;
 }
 
 .ListItem {
-  @include item-row;
-  @extend .hoverable;
-  @extend .hoverable__clickable;
+  @extend %item-row;
+  @extend %hoverable;
+  @extend %hoverable__clickable;
   height: $item-height;
 }
 
 .ListItem__main {
-  @include item-row__main($item-height);
+  @extend item-row__main;
+  height: $item-height;
+  line-height: $item-height;
 }
 
 .ListItem__main__name {
-  @extend .text-ellipsis;
+  @extend %text-ellipsis;
 }
 
 .ListItem__main__hint {
-  @extend .text-light;
+  @extend %text-light;
   text-align: right;
   padding-right: 10px;
 }
@@ -35,9 +37,5 @@ $item-height: 36px;
 }
 
 .ListItem__actions {
-  @include item-row__actions;
-}
-
-.ListItem__actions--hover {
-  @include item-row__actions--hover;
+  @extend %item-row__actions;
 }
