--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,13 +1,16 @@
-@import "~@blueprintjs/core/lib/scss/variables";
+$gray1: #5c7080;
+$gray2: #738694;
+$gray3: #8a9ba8;
+$gray4: #a7b6c2;
+$gray5: #bfccd6;
+$light-gray4: #ebf1f5;
 
-
-// Layout sizes
 $popup-root-width: 450px;
 $popup-root-height: 600px;
 $popup-secondary-block-height: 530px;
 $popup-third-block-height: 465px;
 
-// Colors
+/* Colors */
 $body-bg: #fff;
 $secondary-body-bg: $gray5;
 $color-hover: $light-gray4;
