--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,9 +1,4 @@
-$gray1: #5c7080;
-$gray2: #738694;
-$gray3: #8a9ba8;
-$gray4: #a7b6c2;
-$gray5: #bfccd6;
-$light-gray4: #ebf1f5;
+@import "@blueprintjs/core/lib/scss/variables.scss";
 
 $popup-root-width: 450px;
 $popup-root-height: 600px;
