--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,6 +14,11 @@ body {
   > * {
     height: $popup-secondary-block-height;
   }
+  .bp3-panel-stack-header {
+    height: 45px;
+    margin-left: -10px;
+    margin-bottom: 10px;
+  }
 }
 
 .LinksPage {
