TL-47 Fix icon color and some copy

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -40,3 +40,9 @@ body {
     }
   }
 }
+
+/* workaround for fixing svg fill removed on purging */
+/* purgecss ignore */
+.bp3-icon>svg:not([fill]) {
+  fill: currentColor
+}
